--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,12 +1,12 @@
 <ol class="breadcrumb">
     <li><a href="/">Home</a></li>
-    <li class="active">Add Employee</a></li>
+    <li class="active">Add User</a></li>
 </ol>
 
 <br/>
 <%- partial ('partials/statusmessage.ejs') %>
 
-<h2>Add Employee</h2>
+<h2>Add User</h2>
 <form action="/create" method="POST" class="form-horizontal">
   <div class="form-group">
     <label for="firstName" class="col-sm-2 control-label">First Name</label>
@@ -27,22 +27,9 @@
     </div>
   </div>
   <div class="form-group">
-    <label for="homePhone" class="col-sm-2 control-label">Home Phone</label>
+    <label for="phoneNumber" class="col-sm-2 control-label">Phone Number</label>
     <div class="col-sm-10">
-      <input type="phone" class="form-control" id="homePhone" name="homePhone" placeholder="###-###-####">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="cellPhone" class="col-sm-2 control-label">Cell Phone</label>
-    <div class="col-sm-10">
-      <input type="phone" class="form-control" id="cellPhone" name="cellPhone" placeholder="###-###-####">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="password" class="col-sm-2 control-label">Password</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="password" name="password" aria-describedby="helpBlock">
-      <span id="helpBlock" class="help-block">Password at least 8 characters, 1 upppercase, 1 lowercase, and one number</span>
+      <input type="phone" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="###-###-####">
     </div>
   </div>
   <div class="form-group">
