--- a/views/read.ejs
+++ b/views/read.ejs
@@ -6,34 +6,28 @@
 
 <%- partial ('partials/statusmessage.ejs') %>
 
-<h2>Employees</h2>
+<h2>Users</h2>
 <table class="table table-striped table-bordered">
   <tr>
     <th>ID</th>
     <th>First Name</th>
     <th>Last Name</th>
     <th>Email</th>
-    <th>Home Phone</th>
-    <th>Cell Phone</th>
-    <th>Password</th>
-    <th>Active</th>
+    <th>Phone Number</th>
   </tr>
-  <% if(typeof employees != "undefined" && employees.length > 0){ %>
-    <% employees.forEach(function(employee){ %>
+  <% if(typeof users != "undefined" && users.length > 0){ %>
+    <% users.forEach(function(user){ %>
       <tr>
-        <td><%= employee.id %></td>
-        <td><%= employee.firstName %></td>
-        <td><%= employee.lastName %></td>
-        <td><%= employee.email %></td>
-        <td><%= employee.homePhone %></td>
-        <td><%= employee.cellPhone %></td>
-        <td><%= employee.password %></td>
-        <td><%= employee.active %></td>
+        <td><%= user.id %></td>
+        <td><%= user.firstName %></td>
+        <td><%= user.lastName %></td>
+        <td><%= user.email %></td>
+        <td><%= user.phoneNumber %></td>
       </tr>
     <% }) %>
   <% }else{ %>
       <tr>
-        <td colspan="8">0 records found</td>
+        <td colspan="5">0 records found</td>
       </tr>
   <% } %>
   
