--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -7,20 +7,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img alt="The Iron Yard" src="img/tiy_logo.png"/></a>
+            <a class="navbar-brand" href="#"><img src="http://90s411.com/images/steve-urkel-costume-1.jpg" style="width:55%"/></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
                 <li><a href="/create">Add User</a></li>
-                <li><a href="#">Edit User</a></li>
-                <li><a href="#">Delete User</a></li>
+                <li><a href="/update">Update User</a></li>
+                <li><a href="/delete">Delete User</a></li>
                 <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="/create">Add User</a></li>
-                    <li><a href="#">Edit User</a></li>
-                    <li><a href="#">Delete User</a></li>
+                    <li><a href="/update">Update User</a></li>
+                    <li><a href="/delete">Delete User</a></li>
                 </ul>
                 </li>
             </ul>
