--- a/views/update.ejs
+++ b/views/update.ejs
@@ -1,13 +1,19 @@
 <ol class="breadcrumb">
     <li><a href="/">Home</a></li>
-    <li class="active">Add User</a></li>
+    <li class="active">Update User</a></li>
 </ol>
 
 <br/>
 <%- partial ('partials/statusmessage.ejs') %>
 
-<h2>Add User</h2>
-<form action="/create" method="POST" class="form-horizontal">
+<h2>Update User</h2>
+<form action="/update" method="POST" class="form-horizontal">
+<div class="form-group">
+    <label for="id" class="col-sm-2 control-label">User ID</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="id" name="id" placeholder="User ID">
+    </div>
+  </div>
   <div class="form-group">
     <label for="firstName" class="col-sm-2 control-label">First Name</label>
     <div class="col-sm-10">
@@ -50,7 +56,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Add User</button>
+      <button type="submit" class="btn btn-default">Update User</button>
     </div>
   </div>
 </form>
